--- a/src/core/templates/core/legal/cookies-policy.html
+++ b/src/core/templates/core/legal/cookies-policy.html
@@ -71,7 +71,7 @@
 			<section id="contact" class="legal-section">
 				<h2 class="legal-section-title">{% trans "6. Контакты" %}</h2>
 				<ul>
-					<li><strong>Email:</strong> pyland-school@yandex.com</li>
+					<li><strong>Email:</strong> pylandschool@gmail.com</li>
 				</ul>
 			</section>
 		</main>
