--- a/src/core/templates/shared/_footer.html
+++ b/src/core/templates/shared/_footer.html
@@ -151,7 +151,7 @@
                             <div class="contact-details">
                                 <div class="contact-label">Email</div>
                                 <div class="contact-value">
-                                    <a href="mailto:pyland-school@yandex.com" style="color: inherit; text-decoration: none;">pyland-school@yandex.com</a>
+                                    <a href="mailto:pylandschool@gmail.com" style="color: inherit; text-decoration: none;">pylandschool@gmail.com</a>
                                 </div>
                             </div>
                         </div>
