--- a/src/core/templates/shared/_header.html
+++ b/src/core/templates/shared/_header.html
@@ -7,11 +7,11 @@
         <div class="container">
             <div class="header-top-content">
                 <div class="header-contacts">
-                    <a href="mailto:pyland-school@yandex.com" class="contact-link">
+                    <a href="mailto:pylandschool@gmail.com" class="contact-link">
                         <svg width="16" height="16" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
                         </svg>
-                        pyland-school@yandex.com
+                        pylandschool@gmail.com
                     </a>
                     <a href="tel:+995551006254" class="contact-link">
                         <svg width="16" height="16" fill="currentColor" viewBox="0 0 24 24">
